binrw/tests/ui/invalid_if_args.stderr
error: too many arguments
 --> $DIR/invalid_if_args.rs:6:23
  |
6 |     #[br(if(false, 0, 1, 2, 3))]
  |                       ^^^^^^^
